Fix TCSS syntax error in content-align property
- Changed 'content-align: left left' to 'content-align: left top'
- The content-align property requires horizontal and vertical values
- 'left left' was invalid syntax causing StylesheetParseError
- Now uses correct TCSS syntax: horizontal (left) + vertical (top)

--- a/openhcs/textual_tui/styles.css
+++ b/openhcs/textual_tui/styles.css
@@ -260,10 +260,10 @@ SelectOverlay {
 /* RadioSet and RadioButton alignment - always left aligned */
 RadioSet {
     text-align: left;
-    content-align: left left;
+    content-align: left top;
 }
 
 RadioButton {
     text-align: left;
-    content-align: left left;
+    content-align: left top;
 }
